examples/errors/syntax-errors/src/uses.hsy
// Syntax Error: `crate` must be root in `use` expression
use self::crate::*